--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
         transition: all 0.3s ease;
         overflow: hidden;
         padding: 16px;
-        border: 1px solid #ccc;
-        border-radius: 10px;
+/*         border: 1px solid #ccc; */
+/*         border-radius: 10px; */
         margin-bottom: 16px;
         }
 
@@ -978,4 +978,5 @@
 </body>
 
 </html>
+
 
