--- a/index.html
+++ b/index.html
@@ -1034,7 +1034,7 @@
             card.classList.add("expanded");
           } else {
             extraContent.style.display = "none";
-            toggleLink.textContent = "Learn More";
+            toggleLink.textContent = "Show less";
             card.classList.remove("expanded");
           }
         }
@@ -1042,6 +1042,7 @@
 </body>
 
 </html>
+
 
 
 
