--- a/index.html
+++ b/index.html
@@ -1030,11 +1030,11 @@
         
           if (extraContent.style.display === "none" || extraContent.style.display === "") {
             extraContent.style.display = "block";
-            toggleLink.textContent = "Learn More";
+            toggleLink.textContent = "Show less";
             card.classList.add("expanded");
           } else {
             extraContent.style.display = "none";
-            toggleLink.textContent = "Show less";
+            toggleLink.textContent = "learn more";
             card.classList.remove("expanded");
           }
         }
@@ -1042,6 +1042,7 @@
 </body>
 
 </html>
+
 
 
 
